Add getKeys method and tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple mongoDB collection schema generator",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,12 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^2.11.12",
+    "istanbul": "^0.4.5",
     "mocha": "^3.0.2"
+  },
+  "dependencies": {
+    "mongodb": "^2.2.9",
+    "underscore": "^1.8.3"
   }
 }
