Remove code coverage

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Simple mongoDB collection schema generator",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec",
-    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -28,8 +27,6 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "coveralls": "^2.11.12",
-    "istanbul": "^0.4.5",
     "mocha": "^3.0.2"
   },
   "dependencies": {
