--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,4 @@ install:
   - npm install
 
 script:
-  - npm run cover
-
-after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
+  - npm test
