--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mocha": "^3.0.2"
   },
   "dependencies": {
+    "extend": "^3.0.0",
     "mongodb": "^2.2.9",
     "underscore": "^1.8.3"
   }
